Enhance the checkout finder tests